--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -13,11 +13,12 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "babel": "^6.23.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
-    "next": "13.0.3",
+    "next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
