--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -13,14 +13,20 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "@types/react-router-dom": "^5.3.3",
+    "@web3auth/modal": "^3.0.4",
+    "antd": "^4.24.1",
+    "axios": "^1.1.3",
     "babel": "^6.23.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "ethers": "^5.7.2",
+    "firebase": "^9.14.0",
     "graphql": "^16.6.0",
     "next": "^13.0.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.3",
     "typescript": "4.8.4"
   },
   "devDependencies": {
