--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -25,7 +25,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "hardhat": "^2.12.2",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   }
 }
