--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@ant-design/plots": "^1.2.2",
     "@apollo/client": "^3.7.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "@types/react-router-dom": "^5.3.3",
     "@web3auth/modal": "^3.0.4",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
@@ -26,12 +24,19 @@
     "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.4.3",
-    "typescript": "4.8.4"
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/query-string": "^6.3.0",
+    "@types/reach__router": "^1.3.11",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.8.4"
   }
 }
