--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -36,8 +36,8 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-etherscan": "2.1.8",
-    "@typechain/ethers-v5": "8.0.5",
-    "@typechain/hardhat": "3.0.0",
+    "@typechain/ethers-v5": "^8.0.5",
+    "@typechain/hardhat": "^3.1.0",
     "@types/chai": "4.2.22",
     "@types/mocha": "9.0.0",
     "@types/node": "16.11.11",
@@ -65,7 +65,7 @@
     "tailwindcss": "^3.2.4",
     "ts-generator": "0.1.1",
     "ts-node": "10.4.0",
-    "typechain": "6.0.5",
+    "typechain": "^6.1.0",
     "typescript": "4.5.2"
   },
   "husky": {
@@ -74,7 +74,9 @@
     }
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "antd": "^4.24.2",
+    "react-router-dom": "^6.4.3"
   },
   "author": "Lens",
   "contributors": [
