--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -1,8 +1,7 @@
 {
   "name": "oxford-hack",
   "version": "0.1.0",
-  "description": "Composable and decentralized social graph",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,94 +10,41 @@
     "test": "npm run compile && TRACK_GAS=true hardhat test",
     "quick-test": "hardhat test",
     "spdx": "hardhat prepend-spdx-license",
-    "size": "npm run compile && hardhat size-contracts",
-    "full-deploy-local": "hardhat full-deploy --network localhost",
-    "full-deploy-mumbai": "hardhat full-deploy --network mumbai",
-    "coverage": "npm run compile && hardhat coverage --temp temp-artifacts --testfiles test/emptyrun.coverage.ts && hardhat coverage --temp temp-artifacts --testfiles '!test/emptyrun.coverage.ts'",
-    "run-env": "npm i && tail -f /dev/null",
-    "hardhat": "hardhat",
-    "hardhat:kovan": "hardhat --network kovan",
-    "hardhat:tenderly-main": "hardhat --network tenderlyMain",
-    "hardhat:ropsten": "hardhat --network ropsten",
-    "hardhat:main": "hardhat --network main",
-    "hardhat:docker": "hardhat --network hardhatevm_docker",
-    "hardhat:mumbai": "hardhat --network mumbai",
-    "hardhat:matic": "hardhat --network matic",
-    "compile": "SKIP_LOAD=true hardhat clean && SKIP_LOAD=true hardhat compile",
-    "console:fork": "MAINNET_FORK=true hardhat console",
-    "format": "prettier --write ."
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0",
-    "antd": "^4.24.2",
-    "next": "^13.0.3"
+    "@apollo/client": "^3.7.1",
+    "@web3auth/modal": "^3.0.4",
+    "antd": "^4.24.1",
+    "axios": "^1.1.3",
+    "babel": "^6.23.0",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.3",
+    "ethers": "^5.7.2",
+    "firebase": "^9.14.0",
+    "graphql": "^16.6.0",
+    "next": "^13.0.3",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "2.0.2",
-    "@nomiclabs/hardhat-etherscan": "2.1.8",
-    "@typechain/ethers-v5": "8.0.5",
-    "@typechain/hardhat": "3.0.0",
-    "@types/chai": "4.2.22",
     "@types/jest": "^29.2.2",
-    "@types/mocha": "9.0.0",
-    "@types/node": "16.11.11",
+    "@types/node": "^18.11.9",
     "@types/query-string": "^6.3.0",
     "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
-    "@typescript-eslint/parser": "5.5.0",
     "autoprefixer": "^10.4.13",
-    "chai": "4.3.4",
-    "defender-relay-client": "^1.37.0",
-    "dotenv": "10.0.0",
-    "eslint": "8.3.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "ethereum-waffle": "^4.0.7",
-    "ethers": "5.5.1",
-    "hardhat": "^2.12.2",
-    "hardhat-contract-sizer": "2.1.1",
-    "hardhat-gas-reporter": "1.0.6",
-    "hardhat-log-remover": "2.0.2",
-    "hardhat-spdx-license-identifier": "2.0.3",
-    "husky": "7.0.4",
     "postcss": "^8.4.19",
-    "prettier": "2.5.0",
-    "prettier-plugin-solidity": "1.0.0-beta.19",
-    "solidity-coverage": "^0.8.2",
     "tailwindcss": "^3.2.4",
-    "ts-generator": "0.1.1",
-    "ts-node": "10.4.0",
-    "typechain": "6.0.5",
-    "typescript": "4.5.2"
+    "typescript": "^4.8.4"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern 'contracts/**/*.sol' --pattern 'helpers/**/*.ts'  --pattern 'test/**/*.ts' --pattern 'tasks/**/*.ts'"
-    }
-  },
-  "author": "Lens",
-  "contributors": [
-    "Peter Michael (Zer0dot)",
-    "Miguel Martinez",
-    "Lasse Herskind",
-    "Steven Valeri",
-    "Alan Donoso Naumczuk",
-    "Emilio Frangella",
-    "David Racero"
-  ],
-  "license": "MIT",
-  "keywords": [
-    "lens",
-    "protocol",
-    "aave",
-    "social",
-    "graph",
-    "solidity",
-    "evm",
-    "contracts",
-    "core"
-  ]
+  "dependencies": {
+    "@ant-design/plots": "^1.2.2",
+    "antd": "^4.24.2",
+    "antd-icons": "^0.1.0-alpha.1",
+    "next": "^13.0.3",
+    "react-modal-sheet": "^1.8.1",
+    "react-tsparticles": "^2.5.3",
+    "tailwind": "^4.0.0"
+  }
 }
