--- a/oxford-hack/package.json
+++ b/oxford-hack/package.json
@@ -10,20 +10,36 @@
     "test": "npm run compile && TRACK_GAS=true hardhat test",
     "quick-test": "hardhat test",
     "spdx": "hardhat prepend-spdx-license",
+    "size": "npm run compile && hardhat size-contracts",
+    "full-deploy-local": "hardhat full-deploy --network localhost",
+    "full-deploy-mumbai": "hardhat full-deploy --network mumbai",
+    "coverage": "npm run compile && hardhat coverage --temp temp-artifacts --testfiles test/emptyrun.coverage.ts && hardhat coverage --temp temp-artifacts --testfiles '!test/emptyrun.coverage.ts'",
+    "run-env": "npm i && tail -f /dev/null",
+    "hardhat": "hardhat",
+    "hardhat:kovan": "hardhat --network kovan",
+    "hardhat:tenderly-main": "hardhat --network tenderlyMain",
+    "hardhat:ropsten": "hardhat --network ropsten",
+    "hardhat:main": "hardhat --network main",
+    "hardhat:docker": "hardhat --network hardhatevm_docker",
+    "hardhat:mumbai": "hardhat --network mumbai",
+    "hardhat:matic": "hardhat --network matic",
+    "compile": "SKIP_LOAD=true hardhat clean && SKIP_LOAD=true hardhat compile",
+    "console:fork": "MAINNET_FORK=true hardhat console",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@ant-design/plots": "^1.2.2",
     "@apollo/client": "^3.7.1",
-    "@web3auth/modal": "^3.0.4",
-    "antd": "^4.24.1",
-    "axios": "^1.1.3",
-    "babel": "^6.23.0",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "@reduxjs/toolkit": "^1.9.0",
+    "antd": "^4.24.2",
+    "antd-icons": "^0.1.0-alpha.1",
     "ethers": "^5.7.2",
-    "firebase": "^9.14.0",
     "graphql": "^16.6.0",
     "next": "^13.0.3",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-dom": "^18.2.0",
+    "react-modal-sheet": "^1.8.1",
+    "react-tsparticles": "^2.5.3",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.2.2",
@@ -37,14 +53,5 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "@ant-design/plots": "^1.2.2",
-    "antd": "^4.24.2",
-    "antd-icons": "^0.1.0-alpha.1",
-    "next": "^13.0.3",
-    "react-modal-sheet": "^1.8.1",
-    "react-tsparticles": "^2.5.3",
-    "tailwind": "^4.0.0"
   }
 }
